examples/bad/head_is_always_expression.xp
# head function can not be redeclared - it is a built-in function
head x = if empty x then True else False;

main = head [] == False
